--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -4,8 +4,8 @@ body {
 
 /*.jumbotron .bg{
   background-repeat: no-repeat;
-    background-attachment: fixed; 
-    background-size: 100%, 100%; 
+    background-attachment: fixed;
+    background-size: 100%, 100%;
     background-image: url(https://musicweek.ua/wp-content/uploads/2020/10/Slipknot-med.jpg);
     opacity: 0.5;
 }*/
@@ -16,7 +16,7 @@ body {
 }
 
 .jumbotron .bg {
-  
+
   position: absolute;
   z-index: -1;
   top: 0;
@@ -25,18 +25,18 @@ body {
   right: 0;
   background: url(https://musicweek.ua/wp-content/uploads/2020/10/Slipknot-med.jpg) no-repeat;
   opacity: .5;
-  
+
   background-position: center;
   background-size: cover;
-  
+
 }
 .dropbtn {
   background-color: transparent;
   color: rgba(255,255,255,.5);
-  padding: 16px;
+  padding: 8px;
   font-size: 16px;
   border: none;
-  
+
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -99,10 +99,22 @@ body {
 
 /* Style page content */
 .main {
-  margin-left: 160px; /* Same as the width of the sidebar */
+   /* Same as the width of the sidebar */
   padding: 0px 10px;
+  text-align: center;
 }
-
+h3{
+    text-align: center;
+}
+table{
+    margin-left: 80px;
+}
+form{
+    text-align: center;
+}
+form-controls{
+    size: 80px;
+}
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
